[package]
name = "unknproject"
version = "1.1.1"
edition = "2021"
build = "build.rs"

[dependencies]
eframe = "0.30.0"
egui = { version = "0.30.0", features = ["serde"] }
dll-syringe = "0.15.2"
serde = { version = "1.0.216", features = ["derive"] }
opener = "0.7.2"
dirs = "5.0.1"
serde_json = "1.0.134"
image = { version = "0.25.5", features = ["png"] }
is_elevated = "0.1.2"
egui-notify = "0.18.0"
egui_extras = { version = "0.30.0", features = ["all_loaders"] }
ureq = { version = "2.12.1", features = ["json"] }
vdf-reader = "0.2.0"
whoami = "1.5.2"
discord-rich-presence = "0.2.5"
egui_alignments = { git = "https://github.com/a-littlebit/egui_alignments.git", rev = "a91fb4acf6f9a1f785ad50faf50d99340abecf49"}
chrono = "0.4.39"
log = { version = "0.4.22", features = ["serde"] }
simplelog = "0.12.2"
egui-modal = "0.6.0"
winreg = "0.52.0"

[build-dependencies]
embed-resource = "3.0.1"

[profile.release]
codegen-units = 1
opt-level = "z"
panic = "abort"
strip = true
lto = true
